--- a/Parking_demand/Parking_demand (7-12).ipynb
+++ b/Parking_demand/Parking_demand (7-12).ipynb
@@ -694,7 +694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 변수 들의 분포확인"
+    "### 수치형 데이터의 분포확인"
    ]
   },
   {
@@ -818,8 +818,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 범주형 데이터 Counting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -869,6 +876,497 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 학습 한 잔"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sel = ['총세대수']\n",
+    "X_train = train[sel]\n",
+    "X_test = test[sel]\n",
+    "y_train = train['등록차량수']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([524.31256846, 524.31256846, 524.31256846, ..., 424.88994317,\n",
+       "       424.88994317, 424.88994317])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "pred = model.predict(X_test)\n",
+    "\n",
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### transform 함수\n",
+    "결과 값을 각 행에 넣어주고싶을 때 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>단지코드</th>\n",
+       "      <th>총세대수</th>\n",
+       "      <th>임대건물구분</th>\n",
+       "      <th>지역</th>\n",
+       "      <th>공급유형</th>\n",
+       "      <th>전용면적</th>\n",
+       "      <th>전용면적별세대수</th>\n",
+       "      <th>공가수</th>\n",
+       "      <th>자격유형</th>\n",
+       "      <th>임대보증금</th>\n",
+       "      <th>임대료</th>\n",
+       "      <th>도보 10분거리 내 지하철역 수(환승노선 수 반영)</th>\n",
+       "      <th>도보 10분거리 내 버스정류장 수</th>\n",
+       "      <th>단지내주차면수</th>\n",
+       "      <th>등록차량수</th>\n",
+       "      <th>코드별차량수평균</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>C1072</td>\n",
+       "      <td>754</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>39.79</td>\n",
+       "      <td>116</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>22830000</td>\n",
+       "      <td>189840</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>683.0</td>\n",
+       "      <td>524.312568</td>\n",
+       "      <td>524.312568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C1072</td>\n",
+       "      <td>754</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>46.81</td>\n",
+       "      <td>30</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>36048000</td>\n",
+       "      <td>249930</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>683.0</td>\n",
+       "      <td>524.312568</td>\n",
+       "      <td>524.312568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C1072</td>\n",
+       "      <td>754</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>46.90</td>\n",
+       "      <td>112</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>36048000</td>\n",
+       "      <td>249930</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>683.0</td>\n",
+       "      <td>524.312568</td>\n",
+       "      <td>524.312568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C1072</td>\n",
+       "      <td>754</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>46.90</td>\n",
+       "      <td>120</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>36048000</td>\n",
+       "      <td>249930</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>683.0</td>\n",
+       "      <td>524.312568</td>\n",
+       "      <td>524.312568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>C1072</td>\n",
+       "      <td>754</td>\n",
+       "      <td>아파트</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>국민임대</td>\n",
+       "      <td>51.46</td>\n",
+       "      <td>60</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>H</td>\n",
+       "      <td>43497000</td>\n",
+       "      <td>296780</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>683.0</td>\n",
+       "      <td>524.312568</td>\n",
+       "      <td>524.312568</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    단지코드  총세대수 임대건물구분   지역  공급유형   전용면적  전용면적별세대수   공가수 자격유형     임대보증금  \\\n",
+       "0  C1072   754    아파트  경기도  국민임대  39.79       116  14.0    H  22830000   \n",
+       "1  C1072   754    아파트  경기도  국민임대  46.81        30  14.0    A  36048000   \n",
+       "2  C1072   754    아파트  경기도  국민임대  46.90       112  14.0    H  36048000   \n",
+       "3  C1072   754    아파트  경기도  국민임대  46.90       120  14.0    H  36048000   \n",
+       "4  C1072   754    아파트  경기도  국민임대  51.46        60  14.0    H  43497000   \n",
+       "\n",
+       "      임대료  도보 10분거리 내 지하철역 수(환승노선 수 반영)  도보 10분거리 내 버스정류장 수  단지내주차면수  \\\n",
+       "0  189840                           0.0                 2.0    683.0   \n",
+       "1  249930                           0.0                 2.0    683.0   \n",
+       "2  249930                           0.0                 2.0    683.0   \n",
+       "3  249930                           0.0                 2.0    683.0   \n",
+       "4  296780                           0.0                 2.0    683.0   \n",
+       "\n",
+       "        등록차량수    코드별차량수평균  \n",
+       "0  524.312568  524.312568  \n",
+       "1  524.312568  524.312568  \n",
+       "2  524.312568  524.312568  \n",
+       "3  524.312568  524.312568  \n",
+       "4  524.312568  524.312568  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test['등록차량수'] = pred\n",
+    "\n",
+    "test['코드별차량수평균'] = test.groupby('단지코드')['등록차량수'].transform(np.mean)\n",
+    "\n",
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### drop_duplicates\n",
+    "맨 처음 것만 놔두고 밑의 중복 값을 다 없앤다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>C1072</td>\n",
+       "      <td>524.312568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C1128</td>\n",
+       "      <td>684.671641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C1456</td>\n",
+       "      <td>488.231777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C1840</td>\n",
+       "      <td>481.282884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>C1332</td>\n",
+       "      <td>669.437530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>C2456</td>\n",
+       "      <td>416.070194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>C1266</td>\n",
+       "      <td>482.084679</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>C2152</td>\n",
+       "      <td>354.866481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>C1267</td>\n",
+       "      <td>503.198624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>C2189</td>\n",
+       "      <td>424.889943</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>150 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      code         num\n",
+       "0    C1072  524.312568\n",
+       "1    C1128  684.671641\n",
+       "2    C1456  488.231777\n",
+       "3    C1840  481.282884\n",
+       "4    C1332  669.437530\n",
+       "..     ...         ...\n",
+       "145  C2456  416.070194\n",
+       "146  C1266  482.084679\n",
+       "147  C2152  354.866481\n",
+       "148  C1267  503.198624\n",
+       "149  C2189  424.889943\n",
+       "\n",
+       "[150 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_new = test.drop_duplicates(['단지코드'], keep='first').reset_index()\n",
+    "\n",
+    "sub_df = test_new[['단지코드', '코드별차량수평균']]\n",
+    "sub_df.columns = [['code', 'num']]\n",
+    "sub_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_df.to_csv('first_submit.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
